# src/framework/strings/stringTypes.ts
@@ -3,6 +3,96 @@
  * Use the command `yarn strings` to regenerate this file.
  */
 export interface StringsMap {
-  appName: string
-  harness: string
+  action: string
+  apply: string
+  back: string
+  cancel: string
+  'common.namePlaceholder': string
+  'common.policies': string
+  'common.policiesSets.evaluationCriteria': string
+  'common.policiesSets.newPolicyset': string
+  'common.policiesSets.noPolicySet': string
+  'common.policiesSets.noPolicySetResult': string
+  'common.policiesSets.noPolicySets': string
+  'common.policiesSets.policySetSearch': string
+  'common.policiesSets.stepOne.validId': string
+  'common.policiesSets.stepOne.validIdRegex': string
+  'common.policiesSets.stepOne.validName': string
+  'common.policiesSets.table.enforced': string
+  'common.policiesSets.table.entityType': string
+  'common.policiesSets.table.name': string
+  'common.policy.evaluations': string
+  'common.policy.newPolicy': string
+  'common.policy.noPolicy': string
+  'common.policy.noPolicyEvalResult': string
+  'common.policy.noPolicyResult': string
+  'common.policy.noSelectInput': string
+  'common.policy.policySearch': string
+  'common.policy.policysets': string
+  'common.policy.table.createdAt': string
+  'common.policy.table.lastModified': string
+  'common.policy.table.name': string
+  delete: string
+  description: string
+  descriptionPlaceholder: string
+  details: string
+  edit: string
+  executionsText: string
+  failed: string
+  finish: string
+  'governance.clearOutput': string
+  'governance.deleteConfirmation': string
+  'governance.deleteDone': string
+  'governance.deletePolicySetConfirmation': string
+  'governance.deletePolicySetDone': string
+  'governance.deletePolicySetTitle': string
+  'governance.deleteTitle': string
+  'governance.editPolicy': string
+  'governance.emptyPolicySet': string
+  'governance.evaluatedOn': string
+  'governance.evaluatedTime': string
+  'governance.evaluationEmpty': string
+  'governance.evaluations': string
+  'governance.event': string
+  'governance.failureHeading': string
+  'governance.failureHeadingEvaluationDetail': string
+  'governance.failureModalTitle': string
+  'governance.formatInput': string
+  'governance.inputFailedEvaluation': string
+  'governance.inputSuccededEvaluation': string
+  'governance.noEvaluationForPipeline': string
+  'governance.noPolicySetForPipeline': string
+  'governance.onRun': string
+  'governance.onSave': string
+  'governance.policyIdentifier': string
+  'governance.policyName': string
+  'governance.policySetGroup': string
+  'governance.policySetGroupAccount': string
+  'governance.policySetGroupOrg': string
+  'governance.policySetGroupProject': string
+  'governance.policySetName': string
+  'governance.policySets': string
+  'governance.policySetsApplied': string
+  'governance.selectInput': string
+  'governance.selectSamplePolicy': string
+  'governance.successHeading': string
+  'governance.warn': string
+  'governance.warning': string
+  'governance.warningHeading': string
+  'governance.wizard.fieldArray': string
+  'governance.wizard.policyToEval': string
+  name: string
+  no: string
+  optionalField: string
+  outputLabel: string
+  overview: string
+  status: string
+  success: string
+  tagsLabel: string
+  'validation.identifierIsRequired': string
+  'validation.identifierRequired': string
+  'validation.nameRequired': string
+  'validation.thisIsARequiredField': string
+  'validation.validIdRegex': string
+  yes: string
 }
